[gd_scene load_steps=4 format=2]

[ext_resource path="res://Asset/Spawner/Bullet/Bubble/sprite/bubble.png" type="Texture" id=1]
[ext_resource path="res://Asset/Spawner/Bullet/Bubble/Bubble.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[node name="Bullet" type="Area2D" groups=["Bullet"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DeathTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
